<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="366dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.game.Utils.TitanicTextView

            android:id="@+id/startGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/start_game"
            android:textColor="@color/purple"
            android:textSize="26sp" />

        <com.game.Utils.TitanicTextView

            android:id="@+id/startTimerGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/start_timer_game"
            android:textColor="@color/purple"
            android:textSize="26sp" />

        <com.game.Utils.TitanicTextView

            android:id="@+id/startPropGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/start_prop_game"
            android:textColor="@color/purple"
            android:textSize="26sp" />

        <com.game.Utils.TitanicTextView

            android:id="@+id/startCharts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/start_charts"
            android:textColor="@color/purple"
            android:textSize="26sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>